# next-fastapi-mysql

./: .gitignore  .local.env  README.md  compose.yml  mysql.env
backend/: .env  .gitignore  Dockerfile  README.md  Taskfile.yml  logging.yml  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/schemas/: sample.graphql
backend/src/: main.py
backend/src/application/sample/: delete_sample_service.py  get_sample_service.py  list_sample_service.py  new_sample_service.py  sample_dto.py  update_sample_service.py
backend/src/application/shared/: repository_facroty_interface.py  transaction_interface.py
backend/src/applications/sample/: delete_sample_service.py  get_sample_service.py  list_sample_service.py  new_sample_service.py  sample_dto.py  sample_service.py  update_sample_service.py
backend/src/applications/shared/: context_interface.py  repository_facroty_interface.py  transaction_interface.py
backend/src/domains/shared/: created_at.py  deleted_at.py  updated_at.py
backend/src/infrastructure/db/: base.py  mysql_settings.py
backend/src/infrastructure/repository/: sample_repository.py
backend/src/infrastructures/db/: db.py
backend/src/infrastructures/repository/: sample_repository.py
backend/src/interfaces/graphql/: context_value.py  mutation_type.py  query_type.py  schema.py
backend/src/interfaces/shared/: context.py  repository_factory.py  transaction.py
backend/src/shared/exception/: function_exception.py  function_exeption.py
backend/src/shared/logging/: custom_logging.py  (+1 more)
backend/tests/repository/: test_sample_repository.py
(+41 files in other folders)
